{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 253,
  "lineage": "68285336-9dcc-54e8-8524-467623ac7d6a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "query_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2c8caa4b6378d8c",
            "arn": "arn:aws:ec2:us-east-1:152286733504:instance/i-033860bc398a0fd23",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-033860bc398a0fd23",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-070edffeeafe75ba8",
            "private_dns": "ip-22-1-1-195.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "22.1.1.195",
            "public_dns": "ec2-44-202-2-17.compute-1.amazonaws.com",
            "public_ip": "44.202.2.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b1fffe3464a60781",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d889bd6812b8f15b",
            "tags": {
              "Name": "QueryService"
            },
            "tags_all": {
              "Name": "QueryService"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0070803f896811170"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_sg_query",
            "aws_subnet.public_subnet_1_query",
            "aws_vpc.queryvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway_query",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152286733504:internet-gateway/igw-0ac2320ffb35ad598",
            "id": "igw-0ac2320ffb35ad598",
            "owner_id": "152286733504",
            "tags": {
              "Name": "Internet Gateway"
            },
            "tags_all": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-03075a89efbbf01d0"
          },
          "dependencies": [
            "aws_vpc.queryvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_routing_for_tfvpc_publicSubnet_query",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152286733504:route-table/rtb-0648b5f6e10afa222",
            "id": "rtb-0648b5f6e10afa222",
            "owner_id": "152286733504",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac2320ffb35ad598",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "Public_routing_for_tfvpc_publicSubnet"
            },
            "tags_all": {
              "name": "Public_routing_for_tfvpc_publicSubnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-03075a89efbbf01d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway_query",
            "aws_vpc.queryvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_1_query",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c2e71d4f3b416fb",
            "route_table_id": "rtb-0648b5f6e10afa222",
            "subnet_id": "subnet-0d889bd6812b8f15b"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway_query",
            "aws_route_table.Public_routing_for_tfvpc_publicSubnet_query",
            "aws_subnet.public_subnet_1_query",
            "aws_vpc.queryvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_2_query",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0891ef68956e804ad",
            "route_table_id": "rtb-0648b5f6e10afa222",
            "subnet_id": "subnet-092fcc8346f79cf64"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway_query",
            "aws_route_table.Public_routing_for_tfvpc_publicSubnet_query",
            "aws_subnet.public_subnet_2_query",
            "aws_vpc.queryvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg_query",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152286733504:security-group/sg-0f4ac5f5e3f54e898",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4ac5f5e3f54e898",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250117161811646200000001",
            "name_prefix": "terraform-",
            "owner_id": "152286733504",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg-query"
            },
            "tags_all": {
              "Name": "alb-sg-query"
            },
            "timeouts": null,
            "vpc_id": "vpc-03075a89efbbf01d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.queryvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_query",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152286733504:security-group/sg-0070803f896811170",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0070803f896811170",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8900,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8900
              }
            ],
            "name": "terraform-20250117161811646700000002",
            "name_prefix": "terraform-",
            "owner_id": "152286733504",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg-query"
            },
            "tags_all": {
              "Name": "ec2-sg-query"
            },
            "timeouts": null,
            "vpc_id": "vpc-03075a89efbbf01d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.queryvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1_query",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152286733504:subnet/subnet-0d889bd6812b8f15b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "22.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d889bd6812b8f15b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "152286733504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "public_subnet_1_query"
            },
            "tags_all": {
              "name": "public_subnet_1_query"
            },
            "vpc_id": "vpc-03075a89efbbf01d0"
          },
          "dependencies": [
            "aws_vpc.queryvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2_query",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152286733504:subnet/subnet-092fcc8346f79cf64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "22.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092fcc8346f79cf64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "152286733504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "public_subnet_2_query"
            },
            "tags_all": {
              "name": "public_subnet_2_query"
            },
            "vpc_id": "vpc-03075a89efbbf01d0"
          },
          "dependencies": [
            "aws_vpc.queryvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "queryvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152286733504:vpc/vpc-03075a89efbbf01d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "22.1.0.0/16",
            "default_network_acl_id": "acl-0f705f79e23b412db",
            "default_route_table_id": "rtb-001147ac57a43b035",
            "default_security_group_id": "sg-0300566dec39f3121",
            "dhcp_options_id": "dopt-0645294b3b3248a2d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03075a89efbbf01d0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-001147ac57a43b035",
            "owner_id": "152286733504",
            "tags": {
              "name": "query-VPC"
            },
            "tags_all": {
              "name": "query-VPC"
            }
          }
        }
      ]
    }
  ]
}